Add basic styling to dashboard

--- a/dashboard/resources/public/index.html
+++ b/dashboard/resources/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css"
+    rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="yellow bg-black">
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <h2>Loading...</h2>
     </div>
     <script src="js/compiled/dashboard.js" type="text/javascript"></script>
   </body>
