Add Firebase and some request functions

--- a/dashboard/resources/public/index.html
+++ b/dashboard/resources/public/index.html
@@ -12,5 +12,6 @@
       <h2>Loading...</h2>
     </div>
     <script src="js/compiled/dashboard.js" type="text/javascript"></script>
+    <script src="https://cdn.firebase.com/js/client/2.3.0/firebase.js"></script>
   </body>
 </html>
