--- a/dashboard/resources/public/index.html
+++ b/dashboard/resources/public/index.html
@@ -9,7 +9,9 @@
   </head>
   <body class="yellow bg-black">
     <div id="app">
-      <h2>Loading...</h2>
+      <div class="center py4">
+        <h2>Loading...</h2>
+      </div>
     </div>
     <script src="js/compiled/dashboard.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/js/client/2.3.0/firebase.js"></script>
